@@ -372,6 +372,7 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       pseudo-mode.
     - x2goserver/bin/x2goupdateoptionsstring: an equal sign or space character
       is mandatory after the -m or --mode switch.
+    - X2Go/Server/Agent/NX/Options.pm: document key-value pair extraction.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
